fixed issues related to dark mode

--- a/janaikameka-portfolio/src/components/AgileDelivery.module.css
+++ b/janaikameka-portfolio/src/components/AgileDelivery.module.css
@@ -30,8 +30,7 @@ h2 {
 
 .card {
   padding: 2rem;
-  background-color: #F8FAFC;
-  /* background: var(--bg); */
+  background: var(--border);
   border-radius: 8px;
   border: 1px solid var(--border);
   transition: all 0.3s;
