--- a/janaikameka-portfolio/src/components/Experience.module.css
+++ b/janaikameka-portfolio/src/components/Experience.module.css
@@ -34,8 +34,8 @@ h2 {
 
 .card {
   padding: 2rem;
-  background-color: #F8FAFC;
-  /* background: var(--bg); */
+  /* background-color: #F8FAFC; */
+  background: var(--border);
   border-radius: 8px;
   border-left: 4px solid var(--primary);
   transition: all 0.3s;
